# dev-sandbox

./: .gitignore  Cargo.toml  README.md  make_fake_logs.py
.devcontainer/: devcontainer.json
crates/kv/: Cargo.toml
crates/kv/src/: kv_handle.rs  kv_store.rs  lib.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
fake-logs/json/: json_log_0001.jsonl  json_log_0002.jsonl  json_log_0003.jsonl  json_log_0004.jsonl  json_log_0005.jsonl
lib/async-survival/: Cargo.toml
lib/async-survival/src/: main.rs
lib/chat-room/: Cargo.toml
lib/chat-room/src/: main.rs
lib/failure-is-inevitable/: Cargo.toml
lib/failure-is-inevitable/src/: main.rs
lib/observability_and_control/: Cargo.toml
lib/observability_and_control/src/: main.rs
lib/warm_up/: Cargo.toml
lib/warm_up/src/: main.rs
src/: documents.rs  main.rs  search_engine.rs
