[package]
name = "dev-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
tokio = {version = "1.49.0", features = ["full"]}
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "json"]}
