[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono.workspace = true
kv.workspace = true
log.workspace = true
protobuf = { version = "3.7.2", features = ["with-bytes"] }
raft.workspace = true
slog = "2.8.2"
slog-stdlog = "4.1.1"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
